tests-ast-compare/fixtures/babel/packages/babel-parser/test/fixtures/experimental/import-assertions/valid-syntax-with-attributes-and-value/input.js
import "x" assert { type: "json" }
[0]
