tests-ast-compare/fixtures/babel/packages/babel-parser/test/fixtures/experimental/import-assertions/invalid-syntax-with-attributes-multiple-lines/input.js
import "x" assert
{ type: "json" }
